<resources>
    <string name="app_name">StickFigure</string>
    <string name="sign_in_to_account">SIGN IN TO ACCOUNT</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? <b>Sign Up</b></string>
    <string name="sign_up_to_account">SIGN UP TO ACCOUNT</string>
    <string name="choose_username">Choose Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? <b>Sign In</b></string>
    <string name="forgot_password_cap">FORGOT PASSWORD</string>
    <string name="you_will_get_an_verification_code_at_your_email_address">You will get an verification code at your \nemail address</string>
    <string name="get_code">Get Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_your_new_password">Enter Your New Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="submit">Submit</string>
    <string name="my_profile">My Profile</string>
    <string name="homepage">HomePage</string>
    <string name="newsfeed">NewsFeed</string>
    <string name="creator">Creator</string>
    <string name="shop">Shop</string>
    <string name="messages">Messages</string>
    <string name="blogs">Blogs</string>
    <string name="blog_detail">Blog Detail</string>
    <string name="my_store">My Store</string>
    <string name="wallet">Wallet</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="cart">Cart</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dynamic_comment">Comment (%1$s)</string>

    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="add_your_comment">Add your comment</string>
    <string name="search_chat">Search chat</string>


</resources>