<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav_graph.xml"
    app:startDestination="@id/fragmentHomePage">

    <fragment
        android:id="@+id/fragmentProfile"
        android:name="com.saadi.stickfigure.feature_profile.presentation.profile.FragmentProfile"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/fragmentHomePage"
        android:name="com.saadi.stickfigure.feature_homepage.presentation.FragmentHomePage"
        android:label="@string/homepage"
        tools:layout="@layout/fragment_home_page" />
    <fragment
        android:id="@+id/fragmentNewsFeed"
        android:name="com.saadi.stickfigure.feature_news_feed.presentation.FragmentNewsFeed"
        android:label="@string/newsfeed"
        tools:layout="@layout/fragment_news_feed" />
</navigation>