<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_auth.presentation.reset_password.FragmentResetPassword">

    <TextView
        android:id="@+id/tv_reset_password"
        style="@style/tv_heading"
        android:layout_marginTop="@dimen/_120sdp"
        android:text="@string/reset_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_verification_code"
        style="@style/et_gray"
        android:layout_marginTop="@dimen/_30sdp"
        android:hint="@string/verification_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_reset_password" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_new_password"
        style="@style/et_gray"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/enter_your_new_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_verification_code" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_re_enter_password"
        style="@style/et_gray"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_new_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_code"
        style="@style/stroke_btn"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_re_enter_password" />

</androidx.constraintlayout.widget.ConstraintLayout>