<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_auth.presentation.forgot_password.FragmentForgotPassword">

    <TextView
        android:id="@+id/tv_forgot_password"
        style="@style/tv_heading"
        android:layout_marginTop="@dimen/_120sdp"
        android:text="@string/forgot_password_cap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_info"
        style="@style/tv_body_gray"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/you_will_get_an_verification_code_at_your_email_address"
        app:layout_constraintEnd_toEndOf="@id/tv_forgot_password"
        app:layout_constraintStart_toStartOf="@id/tv_forgot_password"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        style="@style/et_gray"
        android:layout_marginTop="@dimen/_30sdp"
        android:hint="@string/email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_info" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_code"
        style="@style/stroke_btn_small"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/get_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

</androidx.constraintlayout.widget.ConstraintLayout>