<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_auth.presentation.sign_up.FragmentSignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_lets_get_started"
            app:layout_constraintBottom_toTopOf="@id/tv_sign_up"
            app:layout_constraintStart_toStartOf="@id/tv_sign_up" />

        <TextView
            android:id="@+id/tv_sign_up"
            style="@style/tv_heading"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_120sdp"
            android:text="@string/sign_up_to_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up"
            app:srcCompat="@drawable/ic_avatar" />

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_edit"
            android:importantForAccessibility="no"
            android:layout_margin="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="@id/iv_profile"
            app:layout_constraintBottom_toBottomOf="@id/iv_profile"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_username"
            style="@style/et_gray"
            android:inputType="text"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/choose_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profile" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_first_name"
            style="@style/et_gray"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:hint="@string/first_name"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_username" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_last_name"
            style="@style/et_gray"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/last_name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/et_username" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            style="@style/et_gray"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/email_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_first_name" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/gray_round_corners_bg"
            android:gravity="center"
            app:ccp_internationalFormattingOnly="true"
            app:ccpDialog_backgroundColor="@color/app_gray_light"
            app:ccpDialog_cornerRadius="@dimen/_10sdp"
            app:ccpDialog_rippleEnable="true"
            app:ccpDialog_keyboardAutoPopup="false"
            app:ccp_autoDetectCountry="true"
            app:ccp_autoFormatNumber="true"
            app:ccp_textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="@id/et_email"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_phone"
            style="@style/et_gray"
            android:layout_marginStart="@dimen/_10sdp"
            android:hint="@string/mobile_no"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ccp"
            app:layout_constraintTop_toTopOf="@id/ccp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            style="@style/et_gray"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ccp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_confirm_password"
            style="@style/et_gray"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            style="@style/stroke_btn"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_confirm_password" />

        <TextView
            android:id="@+id/tv_or"
            style="@style/tv_body_gray"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/or"
            app:layout_constraintEnd_toEndOf="@id/btn_sign_up"
            app:layout_constraintStart_toStartOf="@id/btn_sign_up"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_up" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_already_have_account"
            style="@style/tv_body_gray"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:text="@string/already_have_an_account_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_or" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>